--- a/typescript/package.json
+++ b/typescript/package.json
@@ -8,6 +8,14 @@
     "ws": "^7.4.6"
   },
   "scripts": {
-    "streaming": "node src/streaming/file.ts"
+    "streaming": "tsx src/streaming/live.ts",
+    "pre-recorded": "tsx src/pre-recorded/transcription.ts"
+  },
+  "dependencies": {
+    "@types/form-data": "^2.5.0",
+    "@types/node": "^20.3.1",
+    "axios": "^1.4.0",
+    "form-data": "^4.0.0",
+    "tsx": "^3.12.7"
   }
 }
