--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "gladia-websocket",
+  "name": "gladia-samples-typescript",
   "version": "1.0.0",
   "license": "MIT",
-  "devDependencies": {
-    "@types/ws": "^7.4.4",
-    "typescript": "^4.3.2",
-    "ws": "^7.4.6"
-  },
-  "scripts": {
-    "streaming-file": "tsx src/streaming/live-from-file.ts",
-    "streaming-file-binary": "tsx src/streaming/live-from-file-binary.ts",
-    "streaming-microphone": "tsx src/streaming/live-from-microphone.ts",
-    "pre-recorded": "tsx src/pre-recorded/transcription.ts"
-  },
   "dependencies": {
-    "@types/form-data": "^2.5.0",
-    "@types/node": "^20.3.1",
     "axios": "^1.4.0",
     "form-data": "^4.0.0",
     "mic": "^2.1.2",
-    "tsx": "^3.12.7"
+    "ws": "^8.14.2"
+  },
+  "devDependencies": {
+    "@types/form-data": "^2.5.0",
+    "@types/node": "^20.3.1",
+    "@types/ws": "^8.5.6",
+    "tsx": "^3.12.7",
+    "typescript": "^5.2.2"
+  },
+  "scripts": {
+    "basic-streaming-file": "tsx src/streaming-basic/live-from-file.ts",
+    "basic-streaming-file-binary": "tsx src/streaming-basic/live-from-file-binary.ts",
+    "basic-streaming-microphone": "tsx src/streaming-basic/live-from-microphone.ts",
+    "streaming-file": "tsx src/streaming-auto-reconnect/live-from-file.ts",
+    "streaming-file-binary": "tsx src/streaming-auto-reconnect/live-from-file-binary.ts",
+    "streaming-microphone": "tsx src/streaming-auto-reconnect/live-from-microphone.ts",
+    "pre-recorded-file": "tsx src/pre-recorded/pre-recorded-file.ts",
+    "pre-recorded-url": "tsx src/pre-recorded/pre-recorded-url.ts"
   }
 }
