--- a/javascript/package.json
+++ b/javascript/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "scripts_js",
+  "name": "gladia-samples-javascript",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "pre-recorded": "node src/pre-recorded/transcription.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "license": "MIT",
+  "type": "module",
   "dependencies": {
     "axios": "^1.4.0",
-    "dotenv": "^16.1.4",
-    "form-data": "^4.0.0"
+    "form-data": "^4.0.0",
+    "mic": "^2.1.2",
+    "ws": "^8.14.2"
+  },
+  "scripts": {
+    "basic-streaming-file": "node src/streaming-basic/live-from-file.js",
+    "basic-streaming-file-binary": "node src/streaming-basic/live-from-file-binary.js",
+    "basic-streaming-microphone": "node src/streaming-basic/live-from-microphone.js",
+    "streaming-file": "node src/streaming-auto-reconnect/live-from-file.js",
+    "streaming-file-binary": "node src/streaming-auto-reconnect/live-from-file-binary.js",
+    "streaming-microphone": "node src/streaming-auto-reconnect/live-from-microphone.js",
+    "pre-recorded-file": "node src/pre-recorded/pre-recorded-file.js",
+    "pre-recorded-url": "node src/pre-recorded/pre-recorded-url.js"
   }
 }
