--- a/javascript/package.json
+++ b/javascript/package.json
@@ -7,6 +7,7 @@
     "axios": "^1.4.0",
     "form-data": "^4.0.0",
     "mic": "^2.1.2",
+    "wavefile": "^11.0.0",
     "ws": "^8.14.2"
   },
   "scripts": {
