--- a/typescript/package.json
+++ b/typescript/package.json
@@ -16,12 +16,10 @@
     "typescript": "^5.2.2"
   },
   "scripts": {
-    "basic-streaming-file": "tsx src/streaming-basic/live-from-file.ts",
-    "basic-streaming-file-binary": "tsx src/streaming-basic/live-from-file-binary.ts",
-    "basic-streaming-microphone": "tsx src/streaming-basic/live-from-microphone.ts",
-    "streaming-file": "tsx src/streaming-auto-reconnect/live-from-file.ts",
-    "streaming-file-binary": "tsx src/streaming-auto-reconnect/live-from-file-binary.ts",
-    "streaming-microphone": "tsx src/streaming-auto-reconnect/live-from-microphone.ts",
+    "live-file": "tsx src/live/live-from-file.ts",
+    "live-microphone": "tsx src/live/live-from-microphone.ts",
+    "live-file-with-resume": "tsx src/live/live-from-file-with-resume.ts",
+    "live-microphone-with-resume": "tsx src/live/live-from-microphone-with-resume.ts",
     "pre-recorded-file": "tsx src/pre-recorded/pre-recorded-file.ts",
     "pre-recorded-url": "tsx src/pre-recorded/pre-recorded-url.ts",
     "to-js": "tsc && cp ./README.md ../javascript/README.md"
