fix: generated javascript files [no issue]

--- a/typescript/tsconfig.json
+++ b/typescript/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "ES2022",
+    "module": "NodeNext",
     "declaration": false,
     "declarationMap": false,
     "sourceMap": false,
@@ -9,7 +9,7 @@
     "removeComments": false,
     "pretty": true,
     "strict": true,
-    "moduleResolution": "node",
+    "moduleResolution": "nodenext",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
