--- a/integrations-examples/livekit-agent/transcriber/pyproject.toml
+++ b/integrations-examples/livekit-agent/transcriber/pyproject.toml
@@ -5,6 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "dotenv>=0.9.9",
+    "python-dotenv>=1.0.0",
     "livekit-agents[gladia]>=1.2.6",
 ]
