--- a/integrations-examples/livekit-agent/pyproject.toml
+++ b/integrations-examples/livekit-agent/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "livekit-example-transcriber"
 version = "0.1.0"
-description = "Add your description here"
+description = "Simple Gladia transcriber example using LiveKit Cloud and LiveKit Agents Playground"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
