--- a/integrations-examples/pipecat-bot/pyproject.toml
+++ b/integrations-examples/pipecat-bot/pyproject.toml
@@ -5,6 +5,5 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "pipecat-ai[webrtc,gladia,runner,silero]>=0.0.81",
-    "python-dotenv>=1.1.1",
+    "pipecat-ai[webrtc,gladia,runner,silero]>=0.0.82"
 ]
