--- a/integrations-examples/pipecat-bot/pyproject.toml
+++ b/integrations-examples/pipecat-bot/pyproject.toml
@@ -5,5 +5,5 @@ description = "Simple Gladia transcriber example using Pipecat"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "pipecat-ai[webrtc,gladia,runner,silero]>=0.0.82"
+    "pipecat-ai[webrtc,gladia,runner,silero]>=0.0.82,<0.1.0"
 ]
