--- a/javascript/package.json
+++ b/javascript/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "axios": "^1.11.0",
     "form-data": "^4.0.4",
-    "mic": "^2.1.2",
+    "node-mic": "^1.0.1",
     "ws": "^8.18.3"
   },
   "scripts": {
@@ -15,6 +15,13 @@
     "live-file-with-resume": "node src/live/live-from-file-with-resume.js",
     "live-microphone-with-resume": "node src/live/live-from-microphone-with-resume.js",
     "pre-recorded-file": "node src/pre-recorded/pre-recorded-file.js",
-    "pre-recorded-url": "node src/pre-recorded/pre-recorded-url.js"
+    "pre-recorded-url": "node src/pre-recorded/pre-recorded-url.js",
+    "format": "prettier --write \"src/**/*.js\""
+  },
+  "engines": {
+    "node": ">=20"
+  },
+  "devDependencies": {
+    "prettier": "^3.6.2"
   }
 }
