--- a/typescript/package.json
+++ b/typescript/package.json
@@ -5,13 +5,14 @@
   "dependencies": {
     "axios": "^1.11.0",
     "form-data": "^4.0.4",
-    "mic": "^2.1.2",
+    "node-mic": "^1.0.1",
     "ws": "^8.18.3"
   },
   "devDependencies": {
-    "@types/node": "^24.2.0",
+    "@types/node": "^20.19.13",
     "@types/ws": "^8.18.1",
-    "tsx": "^4.20.3",
+    "prettier": "^3.6.2",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   },
   "scripts": {
@@ -21,6 +22,10 @@
     "live-microphone-with-resume": "tsx src/live/live-from-microphone-with-resume.ts",
     "pre-recorded-file": "tsx src/pre-recorded/pre-recorded-file.ts",
     "pre-recorded-url": "tsx src/pre-recorded/pre-recorded-url.ts",
-    "to-js": "tsc && sed 's/# TypeScript/# JavaScript/' ./README.md > ../javascript/README.md"
+    "format": "prettier --write \"src/**/*.ts\"",
+    "to-js": "tsc && sed 's/# TypeScript/# JavaScript/' ./README.md > ../javascript/README.md && (cd ../javascript && npm i && npm run format)"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
