--- a/integrations-examples/twilio/package.json
+++ b/integrations-examples/twilio/package.json
@@ -11,11 +11,16 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "ngrok": "^5.0.0-beta.2",
-    "twilio": "^5.8.0",
+    "twilio": "^5.9.0",
     "wavefile": "^11.0.0",
     "ws": "^8.18.3"
+  },
+  "overrides": {
+    "twilio": {
+      "axios": "^1.12.2"
+    }
   }
 }
