feat(refacto): now using livekit example structure

--- a/integrations-examples/livekit-agent/pyproject.toml
+++ b/integrations-examples/livekit-agent/pyproject.toml
@@ -6,4 +6,5 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "livekit-agents[gladia]>=1.2.6",
+    "python-dotenv>=1.1.1",
 ]
