--- a/javascript/package.json
+++ b/javascript/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
+    "@gladiaio/sdk": "^0.5.2",
     "axios": "^1.12.2",
     "form-data": "^4.0.4",
     "node-mic": "^1.0.1",
@@ -12,8 +13,8 @@
   "scripts": {
     "live-file": "node src/live/live-from-file.js",
     "live-microphone": "node src/live/live-from-microphone.js",
-    "live-file-with-resume": "node src/live/live-from-file-with-resume.js",
-    "live-microphone-with-resume": "node src/live/live-from-microphone-with-resume.js",
+    "live-file-without-sdk": "node src/live/live-from-file-without-sdk.js",
+    "live-microphone-without-sdk": "node src/live/live-from-microphone-without-sdk.js",
     "pre-recorded-file": "node src/pre-recorded/pre-recorded-file.js",
     "pre-recorded-url": "node src/pre-recorded/pre-recorded-url.js",
     "format": "prettier --write \"src/**/*.js\""
