--- a/typescript/package.json
+++ b/typescript/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "dependencies": {
+    "@gladiaio/sdk": "^0.5.2",
     "axios": "^1.12.2",
     "form-data": "^4.0.4",
     "node-mic": "^1.0.1",
@@ -18,8 +19,8 @@
   "scripts": {
     "live-file": "tsx src/live/live-from-file.ts",
     "live-microphone": "tsx src/live/live-from-microphone.ts",
-    "live-file-with-resume": "tsx src/live/live-from-file-with-resume.ts",
-    "live-microphone-with-resume": "tsx src/live/live-from-microphone-with-resume.ts",
+    "live-file-without-sdk": "tsx src/live/live-from-file-without-sdk.ts",
+    "live-microphone-without-sdk": "tsx src/live/live-from-microphone-without-sdk.ts",
     "pre-recorded-file": "tsx src/pre-recorded/pre-recorded-file.ts",
     "pre-recorded-url": "tsx src/pre-recorded/pre-recorded-url.ts",
     "format": "prettier --write \"src/**/*.ts\"",
